--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "proxy": "http://localhost:4000",
   "dependencies": {
     "5": "0.0.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.4",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "antd": "^4.17.4",
+    "axios": "^0.24.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.1",
+    "react-social-icons": "^5.7.0",
     "version": "^0.1.2",
     "web-vitals": "^0.2.4"
   },
