--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.5.0",
     "antd": "^4.17.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "moment": "^2.29.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
